(lang dune 3.3)
(name ppx-introspector)
(generate_opam_files true)
(license AGPL3)
(maintainers "j mike dupont <jmikedupont2@gmail.com>")
(authors "j mike dupont <jmikedupont2@gmail.com>")
(source (github meta-introspector/ppxlib-simple-example))
(documentation "TODO")

(package
 (name ppx-introspector)
 (synopsis "Extract knowledge")
 (depends
  (ocaml (>= 4.08)))
 (description "Extraction of knowledge"))