opam-version: "2.0"
maintainer:    "j mike dupont <jmikedupont2@gmail.com>"
description: "PPX introspection"
depends: [
  "dune" {>= "3.3"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
