(env
 (_
  (flags
   (:standard -g -warn-error -69-8-9-26-27-37-34-11-11-32-39 -dtypedtree -dparsetree -dump-into-file -dlambda -annot -dlocations -dsource  -drawlambda  ))))

(test
 (name test)
 (modules test)
 (libraries alcotest ppxlib )

)
(test
 (name test2)
 (modules test2)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)
(test
 (name test2a)
 (modules test2a)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)
(test
 (name unimath)
 (modules unimath)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)
(test
 (name unimath_graph)
 (modules unimath_graph)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)
(test
 (name test3)
 (modules test3)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)

(test
 (name unimathcore_refl)
 (modules unimathcore_refl)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)
(executable
 (name unimathcore_refl2)
 (modules unimathcore_refl2)
 
   (libraries alcotest ppxlib ppx_yojson_conv_lib yojson  ppx_deriving_yojson.runtime   )

 (preprocess (pps ppx_deriving_yojson ))


 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)

(executable 
 (name unimathcore_refl2b)
 (modules unimathcore_refl2b)
 (libraries alcotest ppxlib ppx_yojson_conv_lib yojson  ppx_deriving_yojson.runtime   )

 (preprocess (pps ppx_deriving_yojson ))

 ; (preprocess
 ;  (pps ppxlib.metaquot ppx-introspector -- -no-merge))
)


