(env
 (_
  (flags
   (:standard -warn-error -8-9-26-27-37-34-11-11-32-39 -dtypedtree -dparsetree -dump-into-file -dlambda -annot -dlocations -dsource  -drawlambda  ))))


(test
 (name test)
 (modules test)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot
  ;       ppx-introspector -- -no-merge))
)
(test
 (name test3)
 (modules test3)
 (libraries alcotest ppxlib )
 ; (preprocess
 ;  (pps ppxlib.metaquot
 ;       ppx-introspector -- -no-merge))

)

; this is too big
; (test
;  (name test4)
;  (modules test4)
;  (libraries alcotest ppxlib )
;    ; (preprocess
;    ;  (pps ppxlib.metaquot
;    ;       ppx-introspector -- -no-merge))

; )
